--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,7 @@
     </ul>
   <h2>Other Contact</h2>
     <ul>
-      <li>Phone:<a href="+972548021992">+972-54-8021992</a></li>
+      <li>Phone:<a href="tel:+972548021992">+972(0)54-8021992</a></li>
       <li>Email:<a href="mailto:danieladam.adam@gmail.com">Danieladam.adam@gmail.com</a></li>
     </ul>
   <h2>Leave a Message</h2>
@@ -27,12 +27,16 @@
     <label>Enter Your Email:</label>
     <input type="email">
   </div>
+  <div class="">
+    <label for="">Phone Number (Optional)</label>
+    <input type="tel" name="" value="+972">
+  </div>
   <div>
     <label>Let me know your thoughts:</label><br>
     <textarea name="Name" id="" cols="30" rows="10"></textarea>
   </div>
-  <input type="submit" value="send">
-  <input type="reset">
+  <input type="submit" value="Send">
+  <input type="reset" value="Redo">
   </form>
 </body>
 </html>
