--- a/Contact.html
+++ b/Contact.html
@@ -4,19 +4,33 @@
 <head>
   <meta charset="utf-8">
   <title>🤜Daniel Adam's Personal Site🤛</title>
+  <style>
+    body {
+      background-color:#F8EDE3 blue green;
+    }
+    hr {
+      border-style:dotted none none;
+      border-color: grey;
+      border-top-width:6px;
+      height: 0px;
+      width: 90%;    
+    }
+  </style>
 </head>
 
 <body>
-  <h2>Social</h2>
+    <h2>Social</h2>
     <ul>
       <li><a href="https://www.facebook.com/daniel.adam.334491">FaceBook</a></li>
       <li><a href="https://www.linkedin.com/in/daniel-adam-b060a4179/">LinkedIn</a></li>
     </ul>
+    <hr>
   <h2>Other Contact</h2>
     <ul>
       <li>Phone:<a href="tel:+972548021992">+972(0)54-8021992</a></li>
       <li>Email:<a href="mailto:danieladam.adam@gmail.com">Danieladam.adam@gmail.com</a></li>
     </ul>
+    <hr>
   <h2>Leave a Message</h2>
   <form action="thankyou.html" method="get" enctype="text/plain">
   <div>
@@ -36,7 +50,8 @@
     <textarea name="Name" id="" cols="30" rows="10"></textarea>
   </div>
   <input type="submit" value="Send">
-  <input type="reset" value="Redo">
+  <input type="reset" value="Redo"><br>
+  <a href="index.html"><input type="button" value="Go Back"></a>
   </form>
 </body>
 </html>
