--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 <head>
   <meta charset="utf-8">
   <title>🤜Daniel Adam's Personal Site🤛</title>
+  <style>
+    body{
+      background-color:#F8EDE3 blue green;
+    }
+    hr {
+      border-style:dotted none none;
+      border-color: grey;
+      border-top-width:6px;
+      height: 0px;
+      width: 90%;
+    }
+  </style>
 </head>
 
 <body>
@@ -26,7 +38,7 @@
       </p>
     </td>
   </table>
-  <hr font="2" Color="black">
+  <hr>
   <h3>Skills | Programs - Control Level</h3>
 <table ellspacing = "10">
   <tb>
@@ -62,7 +74,7 @@
   </tb>
 </table>
 
-  <hr font="2" Color="black">
+  <hr>
   <h3>Work Experience</h3>
    <table cellspacing = "10">
      <thea>
@@ -93,7 +105,7 @@
        </tr>
      </tb>
   <table cellspacing = "10">
-    <hr font="2" Color="black">
+    <hr>
     <h3>Hobbies and Interests</h3>
   <table>
     <tr>
