--- a/thankyou.html
+++ b/thankyou.html
@@ -4,21 +4,10 @@
 <head>
   <meta charset="utf-8">
   <title>🤜Daniel Adam's Personal Site🤛</title>
-  <style>
-    body {
-      background-color:#F8EDE3 blue green;
-    }
-    hr {
-      border-style:dotted none none;
-      border-color: grey;
-      border-top-width:6px;
-      height: 0px;
-      width: 90%;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
-<body style="background-color:#F8EDE3;">
+<body>
 <img src="C:\Users\danie\Desktop\thank-you-contacting-us.png" alt="Thank you for you contact">
 <br>
 <a href="index.html"><input type="submit" value="Go Back"></a>
