--- a/Contact.html
+++ b/Contact.html
@@ -4,18 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>🤜Daniel Adam's Personal Site🤛</title>
-  <style>
-    body {
-      background-color:#F8EDE3 blue green;
-    }
-    hr {
-      border-style:dotted none none;
-      border-color: grey;
-      border-top-width:6px;
-      height: 0px;
-      width: 90%;    
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 
 <body>
