--- a/index.html
+++ b/index.html
@@ -4,20 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>🤜Daniel Adam's Personal Site🤛</title>
-  <style>
-    body{
-      background-color:#F8EDE3 blue green;
-    }
-    hr {
-      border-style:dotted none none;
-      border-color: grey;
-      border-top-width:6px;
-      height: 0px;
-      width: 90%;
-    }
-  </style>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
-
 <body>
   <table>
     <td>
@@ -73,7 +61,6 @@
     </tr>
   </tb>
 </table>
-
   <hr>
   <h3>Work Experience</h3>
    <table cellspacing = "10">
@@ -123,5 +110,4 @@
     <table>
   <h3><a href="Contact.html">Contact Me</a></h3>
 </body>
-
 </html>
