--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table>
     <td>
-      <img
+      <img class="daniel-Adam"
       src="2.PNG"
       height="150"
       width="150"
@@ -21,13 +21,13 @@
         <em>Entrepreneur, <strong>Forwarding Expert</strong>.</em>
       </p>
       <p>
-        <br> B.A in <strong>Economics and Managment</strong>, Specialized in Iformation Systems.
-        <br> M.B.A in <strong>Managment</strong>, Specialized in Finance and Real-Estate
+        <br> B.A in <em><strong>Economics and Managment</strong></em>, Specialized in Iformation Systems.
+        <br> M.B.A in <em><strong>Managment</strong></em>, Specialized in Finance and Real-Estate.
       </p>
     </td>
   </table>
   <hr>
-  <h3>Skills | Programs - Control Level</h3>
+  <h3>Skills | Programs - Control Level:</h3>
 <table ellspacing = "10">
   <tb>
     <tr>
@@ -59,10 +59,14 @@
       <td>HTML</td>
       <td>⭐</td>
     </tr>
+      <tr>
+        <td>CSS</td>
+        <td>⭐</td>
+      </tr>
   </tb>
 </table>
   <hr>
-  <h3>Work Experience</h3>
+  <h3>Work Experience:</h3>
    <table cellspacing = "10">
      <thea>
        <tr>
@@ -73,41 +77,42 @@
      </thea>
      <tb>
          <td>2022-Present</td>
-         <td>Conquer the World</td>
+         <td>Conquer the World! 💪</td>
          <td>Wait For It...</td>
        <tr>
          <td>2017-2022</td>
-         <td>Import Manager</td>
-         <td>24 workers on two Departments</td>
+         <td>Import Operations Manager.</td>
+         <td>Two Departments, 24 workers. </td>
        </tr>
        <tr>
         <td>2016-2017</td>
-        <td>Tracing Department</td>
-        <td>Line Manager</td>
+        <td>Tracing Department.</td>
+        <td>Lines Manager.</td>
        </tr>
        <tr>
          <td>2015-2016</td>
-         <td>Customs Broker - Student Position</td>
-         <td>Clearing Packages from Customs</td>
+         <td>Customs Broker - Student Position.</td>
+         <td>Clearing Packages from Customs.</td>
        </tr>
      </tb>
   <table cellspacing = "10">
     <hr>
-    <h3>Hobbies and Interests</h3>
+    <h3>Hobbies and Interests:</h3>
   <table>
     <tr>
       <td>
-      <li>Economics</li>
-      <li>Reading</li>
-      <li>Learning</li>
+      <li>Economics.</li>
+      <li>Reading.</li>
+      <li>Learning.</li>
       </td>
       <td>
-      <li>Running</li>
-      <li>Music</li>
-      <li>Fishing</li>
+      <li>Running.</li>
+      <li>Music.</li>
+      <li>Fishing.</li>
       </td>
     </<tr>
     <table>
-  <h3><a href="Contact.html">Contact Me</a></h3>
+  <h3><a href="Contact.html">Contact Me!</a>
+  <a href="My Site\index.html">See Other Works!</a></h3>
 </body>
 </html>
