--- a/web development/My Site/index.html
+++ b/web development/My Site/index.html
@@ -20,8 +20,8 @@
   <div class="middle-container">
     <div class="profile">
       <img class="me" src="images\2.PNG" alt="Daniel's-image">
-      <h2>About Me.</h2>
-      <p>I'm an <em>Entrepreneur</em>, Specialized in Forwarding, Iformation Systems, Finance and Real-Estate.
+      <h2 class="about-me">About Me.</h2>
+      <p class="intro">I'm an <em>Entrepreneur</em>, Specialized in Forwarding, Iformation Systems, Finance and Real-Estate.
       <br> B.A in <em><strong>Economics and Managment</strong></em>, Specialized in Iformation Systems.
       <br> M.B.A in <em><strong>Managment</strong></em>, Specialized in Finance and Real-Estate.</p>
     </div>
@@ -33,33 +33,33 @@
           <tb>
             <tr>
               <td>SQL</td>
-              <td>⭐⭐⭐⭐</td>
+              <td class="star">⭐⭐⭐⭐</td>
               <td>R</td>
-              <td>⭐⭐⭐</td>
+              <td class="star">⭐⭐⭐</td>
               <td>SAS</td>
-              <td>⭐⭐⭐</td>
+              <td class="star">⭐⭐⭐</td>
             </tr>
             <tr>
               <td>VBA</td>
-              <td>⭐⭐⭐⭐</td>
+              <td class="star">⭐⭐⭐⭐</td>
               <td>Google Analytics</td>
-              <td>⭐⭐⭐⭐</td>
+              <td class="star">⭐⭐⭐⭐</td>
               <td>Google AdWords</td>
-              <td>⭐⭐⭐</td>
+              <td class="star">⭐⭐⭐</td>
             </tr>
             <tr>
               <td>Microsoft Ofiice</td>
-              <td>⭐⭐⭐⭐⭐</td>
+              <td class="star">⭐⭐⭐⭐⭐</td>
               <td>Excel</td>
-              <td>⭐⭐⭐⭐⭐</td>
+              <td class="star">⭐⭐⭐⭐⭐</td>
               <td>CSS</td>
-              <td>⭐</td>
+              <td class="star">⭐</td>
             </tr>
             <tr>
               <td>HTML</td>
-              <td>⭐</td>
+              <td class="star">⭐</td>
               <td>Unifreight (SAP Program)</td>
-              <td>⭐⭐⭐⭐⭐</td>
+              <td class="star">⭐⭐⭐⭐⭐</td>
             </tr>
           </tb>
         </table>
@@ -75,22 +75,21 @@
     <hr>
     <div class="contact-me">
       <h2>Get In Touch</h2>
-      <h3></h3>
       <p></p>
       <img class="gmail-img" src="images\gmail.png" alt="Email">
-      <a class="btn" href="mailto:danieladam.adam@gmail.com">CONTACT ME</a>
+      <a class="btn" href="mailto:danieladam.adam@gmail.com">Contact Me</a>
     </div>
   </div>
   <div class="bottom-container">
-    <img class="facebook-img" src="images\linkedin.png" alt="">
+    <img class="facebook-img" src="images\facebook.png" alt="">
     <a class="footer-link1" href="https://www.facebook.com/daniel.adam.334491">FaceBook</a>
-    <img class="linkedin-img" src="images\facebook.png" alt="">
+    <img class="linkedin-img" src="images\linkedin.png" alt="">
     <a class="footer-link2" href="https://www.linkedin.com/in/daniel-adam-b060a4179/">LinkedIn</a>
     <img class="call-img" src="images\apple.png" alt="phone-number">
     <a class="footer-link3" href="tel:+972548021992">Phone</a>
     <img class="web-img" src="images\web.png" alt="website">
     <a class="footer-link4" href="https://danieladam1992.github.io/CV/index.html">Website</a>
-    <p>© Daniel Adam.</p>
+    <p>©Daniel Adam.</p>
   </div>
 
   </body>
