--- a/web development/HTML - PERSONAL SITE/index.html
+++ b/web development/HTML - PERSONAL SITE/index.html
@@ -113,6 +113,6 @@
     </<tr>
     <table>
   <h3><a href="Contact.html">Contact Me!</a>
-  <a href="C:\Users\danie\Documents\web development\My Site\index.html">See Other Works!</a></h3>
+  <a href="web development\My Site\index.html">See Other Works!</a></h3>
 </body>
 </html>
