--- a/index.html
+++ b/index.html
@@ -113,6 +113,6 @@
     </<tr>
     <table>
   <h3><a href="Contact.html">Contact Me!</a>
-  <a href="My Site\index.html">See Other Works!</a></h3>
+  <a href="web development\My Site\index.html">See Other Works!</a></h3>
 </body>
 </html>
