--- a/web development/mentorme/index.html
+++ b/web development/mentorme/index.html
@@ -71,17 +71,17 @@
     <div class="col-lg-4 col-md-12">
     <i class="fa-solid fa-magnifying-glass col-6"></i>
     <h3>Find a Mentor or Be One.</h3>
-    <p>Learn to get the skills and the path the you need.</p>
+    <p class= "features-box">Learn to get the skills and the path the you need.</p>
     </div>
     <div class="col-lg-4 col-md-12">
     <i class="fa-solid fa-globe  col-6"></i>
     <h3>International Programs.</h3>
-    <p>People all over the world that want to connect.</p>
+    <p class= "features-box">People all over the world that want to connect.</p>
     </div>
     <div class="col-lg-4 col-md-12">
     <i class="fa-solid fa-handshake col-6"></i>
     <h3>Find a connection near by.</h3>
-    <p>Connect Mentor or Student close to you.</p>
+    <p class= "features-box">Connect Mentor or Student close to you.</p>
     </div>
   </div>
   </div>
