--- a/web development/mentorme/index.html
+++ b/web development/mentorme/index.html
@@ -69,17 +69,17 @@
 
   <div class="row">
     <div class="col-lg-4 col-md-12">
-    <i class="fa-solid fa-magnifying-glass col-6"></i>
+    <i class="fa-solid fa-magnifying-glass col-6 features-icon"></i>
     <h3>Find a Mentor or Be One.</h3>
     <p class= "features-box">Learn to get the skills and the path the you need.</p>
     </div>
     <div class="col-lg-4 col-md-12">
-    <i class="fa-solid fa-globe  col-6"></i>
+    <i class="fa-solid fa-globe  col-6 features-icon"></i>
     <h3>International Programs.</h3>
     <p class= "features-box">People all over the world that want to connect.</p>
     </div>
     <div class="col-lg-4 col-md-12">
-    <i class="fa-solid fa-handshake col-6"></i>
+    <i class="fa-solid fa-handshake col-6 features-icon"></i>
     <h3>Find a connection near by.</h3>
     <p class= "features-box">Connect Mentor or Student close to you.</p>
     </div>
@@ -92,9 +92,9 @@
 
   <section id="testimonials">
 
-    <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
-    <img src="images/dog-img.jpg" alt="dog-profile">
-    <em>Pebbles, New York</em>
+    <h2>"More Private than linkedIn or Facebook. I actualy found a mentor for one on one talks"</h2>
+    <img class="testimonials-image" src="images/1on1.png" alt="conversation">
+    <em>Daniel, Yavne (Israel)</em>
 
     <!-- <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
     <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
@@ -106,10 +106,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img src="images/techcrunch.png" alt="tc-logo">
-    <img src="images/tnw.png" alt="tnw-logo">
-    <img src="images/bizinsider.png" alt="biz-insider-logo">
-    <img src="images/mashable.png" alt="mashable-logo">
+    <img class="press-image" src="images/techcrunch.png" alt="tc-logo">
+    <img class="press-image" src="images/tnw.png" alt="tnw-logo">
+    <img class="press-image" src="images/bizinsider.png" alt="biz-insider-logo">
+    <img class="press-image" src="images/mashable.png" alt="mashable-logo">
 
   </section>
 
